# BPLA_Optimisation

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/: agents.h  criteria.h  dynamics.h  sofama.h  target_states.h
src/: criteria.cpp  dynamics.cpp  sofama.cpp  stability.cpp  target_states.cpp
